Bug 475004 - Tab Context Menu (Open on device) missing
Summary: Tab Context Menu (Open on device) missing
Status: RESOLVED FIXED
Alias: None
Product: plasma-browser-integration
Classification: Plasma
Component: Firefox (other bugs)
Version First Reported In: unspecified
Platform: Manjaro Linux
: NOR normal
Target Milestone: ---
Assignee: Kai Uwe Broulik
URL:
Keywords:
: 476318 (view as bug list)
Depends on:
Blocks:
 
Reported: 2023-09-28 22:04 UTC by severin.hamader
Modified: 2023-11-28 14:31 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.27.10
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description severin.hamader 2023-09-28 22:04:59 UTC
SUMMARY
Since some time now, I am missing the **Tab** context menu item "Open on device", which sends the selected tab to my phone.


STEPS TO REPRODUCE
1. Have a phone linked to KDE Connect
2. Install browser extension
3. Right-click on any open tab

OBSERVED RESULT
KDE Connect specific menu item is missing.

EXPECTED RESULT
KDE Connect specific menu item "Open on device" is present and works.


SOFTWARE/OS VERSIONS
Linux/KDE Plasma: 6.5.5-1-MANJARO (64-bit)
KDE Plasma Version: 5.27.8
KDE Frameworks Version: 5.110.0
Qt Version: 5.15.10
Wayland
Firefox: 119.0b2 (64-Bit) (However, I could also reproduce it in 102.0.1)

ADDITIONAL INFORMATION
I am quite unsure what causes this.
The extension code didn't change since years and even older Firefox version aren't showing the menu item.
I tried debugging the extension in Firefox, and it seems that the "deviceAdded" callback (extension/extension-kdeconnect.js) is never called.
I even tried to re-link my phone in KDE Connect from both sides but no change.
Comment 1 Bug Janitor Service 2023-10-17 00:50:01 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-browser-integration/-/merge_requests/109
Comment 2 Kai Uwe Broulik 2023-10-30 08:45:05 UTC
*** Bug 476318 has been marked as a duplicate of this bug. ***
Comment 3 Aleix Pol 2023-11-28 14:23:39 UTC
Git commit 64609804d00e54b56193e8777afabcb8afc09303 by Aleix Pol Gonzalez, on behalf of Gabriel Souza Franco.
Committed on 28/11/2023 at 14:13.
Pushed by gabrielsf into branch 'master'.

Fix KDEConnect property lookup in D-Bus response

The interface was inadvertently changed in network/kdeconnect-kde!547

M  +3    -1    host/kdeconnectplugin.cpp

https://invent.kde.org/plasma/plasma-browser-integration/-/commit/64609804d00e54b56193e8777afabcb8afc09303
Comment 4 Gabriel Souza Franco 2023-11-28 14:31:10 UTC
Git commit 4baebdfff21bb4a23c7e4b8fc9a8d789bbcb52bc by Gabriel Souza Franco.
Committed on 28/11/2023 at 15:25.
Pushed by gabrielsf into branch 'Plasma/5.27'.

Fix KDEConnect property lookup in D-Bus response

The interface was inadvertently changed in network/kdeconnect-kde!547
FIXED-IN: 5.27.10
(cherry picked from commit 64609804d00e54b56193e8777afabcb8afc09303)

M  +3    -1    host/kdeconnectplugin.cpp

https://invent.kde.org/plasma/plasma-browser-integration/-/commit/4baebdfff21bb4a23c7e4b8fc9a8d789bbcb52bc