Fix KDEConnect property lookup in D-Bus response

The interface was inadvertently changed in network/kdeconnect-kde!547

BUG: 475004
FIXED-IN: 5.27.10
(cherry picked from commit 64609804d00e54b56193e8777afabcb8afc09303)